# physics-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: README.md
.github/workflows/: README.md  ci.yaml
docs/: README.md
include/: README.md  particle.h  simulation.h
infra/: Dockerfile  Jenkinsfile  README.md
infra/nomad/: README.md
infra/puppet/: README.md
scripts/: README.md
src/: README.md  main.cxx  particle.cxx  simulation.cxx
test/: README.md  particle-unit-tests.cxx  simulation-unit-tests.cxx
